--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -36,19 +36,25 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
             <li>
-              <a class="dropdown-item" href="/atc">ATC 2025</a>
+              <a class="dropdown-item text-wrap" href="/atc">ATC 2025</a>
             </li>
             <li>
-              <a class="dropdown-item" href="/digitaltwin">Digital Twin 2025</a>
+              <a class="dropdown-item text-wrap" href="/digitaltwin"
+                >Digital Twin 2025</a
+              >
             </li>
             <li>
-              <a class="dropdown-item" href="/metaverse">Metaverse 2025</a>
+              <a class="dropdown-item text-wrap" href="/metaverse"
+                >Metaverse 2025</a
+              >
             </li>
             <li>
-              <a class="dropdown-item" href="/scalcom">ScalCom 2025</a>
+              <a class="dropdown-item text-wrap" href="/scalcom"
+                >ScalCom 2025</a
+              >
             </li>
             <li>
-              <a class="dropdown-item" href="/uic">UIC 2025</a>
+              <a class="dropdown-item text-wrap" href="/uic">UIC 2025</a>
             </li>
             <li class="border-top mt-2 pt-2">
               <a class="dropdown-item" href="/cfp/">Call for Papers</a>
@@ -67,25 +73,32 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
             <li class="">
-              <a class="dropdown-item" href="/workshops/iaiddt/">
+              <a class="dropdown-item text-wrap" href="/workshops/iaiddt/">
                 IAIDDT 2025</a
               >
             </li>
             <li class="">
-              <a class="dropdown-item" href="/workshops/fusion/">
+              <a class="dropdown-item text-wrap" href="/workshops/fusion/">
                 Fusion 2025
               </a>
             </li>
             <li class="">
-              <a class="dropdown-item" href="/workshops/next-gen-networking/">
+              <a
+                class="dropdown-item text-wrap"
+                href="/workshops/next-gen-networking/"
+              >
                 Next Generation Networking 2025
               </a>
             </li>
             <li class="">
-              <a class="dropdown-item" href="/workshops/sega/"> SEGA 2025 </a>
+              <a class="dropdown-item text-wrap" href="/workshops/sega/">
+                SEGA 2025
+              </a>
             </li>
             <li class="border-top mt-2 pt-2">
-              <a class="dropdown-item" href="/cfp/">Call for Papers</a>
+              <a class="dropdown-item text-wrap" href="/cfp/"
+                >Call for Papers</a
+              >
             </li>
           </ul>
         </li>
@@ -102,7 +115,7 @@
           <ul class="dropdown-menu dropdown-menu-black">
             <li class="">
               <a
-                class="dropdown-item"
+                class="dropdown-item text-wrap"
                 href="/special-sessions/ai-and-machine-learning/"
               >
                 AI and Machine Learning</a
@@ -110,14 +123,16 @@
             </li>
             <li class="">
               <a
-                class="dropdown-item"
+                class="dropdown-item text-wrap"
                 href="/special-sessions/5g-enabled-uavs-and-ml-for-iot-uav-networks/"
               >
                 5G-Enabled UAV and ML for IOT/UAV Networks
               </a>
             </li>
             <li class="border-top mt-2 pt-2">
-              <a class="dropdown-item" href="/cfp/">Call for Papers</a>
+              <a class="dropdown-item text-wrap" href="/cfp/"
+                >Call for Papers</a
+              >
             </li>
           </ul>
         </li>
@@ -136,7 +151,10 @@
               <span class="dropdown-item-text text-white">Forums</span>
             </li>
             <li class="">
-              <a class="dropdown-item" href="/forums/women-in-the-smart-world/">
+              <a
+                class="dropdown-item text-wrap"
+                href="/forums/women-in-the-smart-world/"
+              >
                 Women in the Smart World 2025</a
               >
             </li>
@@ -145,7 +163,7 @@
             </li>
             <li class="">
               <a
-                class="dropdown-item"
+                class="dropdown-item text-wrap"
                 href="/panels/ais-transformative-influence-on-higher-education/"
               >
                 AI's Transformative Influence on Higher Education</a
@@ -165,40 +183,46 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
             <li>
-              <a class="dropdown-item" href="/keynotes/chunsheng-yang/"
+              <a
+                class="dropdown-item text-wrap"
+                href="/keynotes/chunsheng-yang/"
                 >Chunsheng Yang</a
               >
             </li>
             <li>
-              <a class="dropdown-item" href="/keynotes/giancarlo-fortino/"
+              <a
+                class="dropdown-item text-wrap"
+                href="/keynotes/giancarlo-fortino/"
                 >Giancarlo Fortino</a
               >
             </li>
             <li>
-              <a class="dropdown-item" href="/keynotes/runhe-huang/"
+              <a class="dropdown-item text-wrap" href="/keynotes/runhe-huang/"
                 >Runhe Huang</a
               >
             </li>
             <li>
-              <a class="dropdown-item" href="/keynotes/shauna-zenteno/"
+              <a
+                class="dropdown-item text-wrap"
+                href="/keynotes/shauna-zenteno/"
                 >Shauna Zenteno</a
               >
             </li>
             <li class="border-top mt-2 pt-2">
-              <span class="dropdown-item-text text-white"
+              <span class="dropdown-item-text text-white text-wrap"
                 >Industry Day Keynotes</span
               >
             </li>
             <li>
               <a
-                class="dropdown-item"
+                class="dropdown-item text-wrap"
                 href="/program/industry-day/#jan-bradley-keynote"
                 >Jan Bradley</a
               >
             </li>
             <li>
               <a
-                class="dropdown-item"
+                class="dropdown-item text-wrap"
                 href="/program/industry-day/#martin-dinel-keynote"
                 >Martin Dinel</a
               >
@@ -207,7 +231,7 @@
         </li>
         <li class="nav-item dropdown">
           <a
-            class="nav-link dropdown-toggle text-white"
+            class="nav-link dropdown-toggle text-white text-wrap"
             href="#"
             role="button"
             data-bs-toggle="dropdown"
@@ -216,14 +240,9 @@
             Tutorials
           </a>
           <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
-            <li class="">
-              <a class="dropdown-item" href="/tutorials/call-for-tutorials/">
-                Call for Tutorials
-              </a>
-            </li>
-            <li class="border-top mt-2 pt-2">
+            <li class="pt-2">
               <a
-                class="dropdown-item"
+                class="dropdown-item text-wrap"
                 href="/tutorials/intelligent-network-management-for-next-generation-networks/"
               >
                 Intelligent Network Management for Next-Generation Networks
@@ -231,7 +250,7 @@
             </li>
             <li class="">
               <a
-                class="dropdown-item"
+                class="dropdown-item text-wrap"
                 href="/tutorials/advances-in-knowledge-graph-computation-in-the-era-of-gen-ai/"
               >
                 Knowledge Graph Computation in the Era of Gen AI
@@ -239,14 +258,17 @@
             </li>
             <li class="">
               <a
-                class="dropdown-item"
+                class="dropdown-item text-wrap"
                 href="/tutorials/roadmap-of-federated-learning-from-motivation-to-practice/"
               >
                 Roadmap of Federated Learning: from Motivation to Practice
               </a>
             </li>
             <li class="">
-              <a class="dropdown-item" href="/tutorials/sensing-the-mind/">
+              <a
+                class="dropdown-item text-wrap"
+                href="/tutorials/sensing-the-mind/"
+              >
                 Sensing the Mind
               </a>
             </li>
@@ -258,13 +280,21 @@
                 The Practice of Using Language Models
               </a>
             </li>
-            <li class="">
+            <li class="mb-2">
               <a
-                class="dropdown-item"
+                class="dropdown-item text-wrap"
                 href="/tutorials/towards-resilient-and-ultrasafe-energy-systems-for-the-next-gen-smart-grid/"
               >
                 Towards Resilient and Ultrasafe Energy Systems for the Next-Gen
                 Smart Grid
+              </a>
+            </li>
+            <li class="border-top pt-2">
+              <a
+                class="dropdown-item text-wrap"
+                href="/tutorials/call-for-tutorials/"
+              >
+                Call for Tutorials
               </a>
             </li>
           </ul>
@@ -292,12 +322,14 @@
               <span class="dropdown-item-text text-white">Venue</span>
             </li>
             <li>
-              <a class="dropdown-item" href="/venue/telus-convention-center"
+              <a
+                class="dropdown-item text-wrap"
+                href="/venue/telus-convention-center"
                 >Telus Convention Center</a
               >
             </li>
             <li>
-              <a class="dropdown-item" href="/venue/calgary/"
+              <a class="dropdown-item text-wrap" href="/venue/calgary/"
                 >Calgary and Area</a
               >
             </li>
