--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -85,6 +85,7 @@
             <li class="">
               <a
                 class="dropdown-item text-wrap"
+                style="min-width: 250px"
                 href="/workshops/next-gen-networking/"
               >
                 Next Generation Networking 2025
@@ -116,6 +117,7 @@
             <li class="">
               <a
                 class="dropdown-item text-wrap"
+                style="min-width: 250px"
                 href="/special-sessions/ai-and-machine-learning/"
               >
                 AI and Machine Learning</a
@@ -124,6 +126,7 @@
             <li class="">
               <a
                 class="dropdown-item text-wrap"
+                style="min-width: 250px"
                 href="/special-sessions/5g-enabled-uavs-and-ml-for-iot-uav-networks/"
               >
                 5G-Enabled UAV and ML for IOT/UAV Networks
@@ -153,6 +156,7 @@
             <li class="">
               <a
                 class="dropdown-item text-wrap"
+                style="min-width: 250px"
                 href="/forums/women-in-the-smart-world/"
               >
                 Women in the Smart World 2025</a
@@ -164,6 +168,7 @@
             <li class="">
               <a
                 class="dropdown-item text-wrap"
+                style="min-width: 250px"
                 href="/panels/ais-transformative-influence-on-higher-education/"
               >
                 AI's Transformative Influence on Higher Education</a
@@ -243,6 +248,7 @@
             <li class="pt-2">
               <a
                 class="dropdown-item text-wrap"
+                style="min-width: 250px"
                 href="/tutorials/intelligent-network-management-for-next-generation-networks/"
               >
                 Intelligent Network Management for Next-Generation Networks
@@ -251,6 +257,7 @@
             <li class="">
               <a
                 class="dropdown-item text-wrap"
+                style="min-width: 250px"
                 href="/tutorials/advances-in-knowledge-graph-computation-in-the-era-of-gen-ai/"
               >
                 Knowledge Graph Computation in the Era of Gen AI
@@ -259,6 +266,7 @@
             <li class="">
               <a
                 class="dropdown-item text-wrap"
+                style="min-width: 250px"
                 href="/tutorials/roadmap-of-federated-learning-from-motivation-to-practice/"
               >
                 Roadmap of Federated Learning: from Motivation to Practice
@@ -267,6 +275,7 @@
             <li class="">
               <a
                 class="dropdown-item text-wrap"
+                style="min-width: 250px"
                 href="/tutorials/sensing-the-mind/"
               >
                 Sensing the Mind
@@ -275,6 +284,7 @@
             <li class="">
               <a
                 class="dropdown-item"
+                style="min-width: 250px"
                 href="/tutorials/the-practice-of-using-language-models/"
               >
                 The Practice of Using Language Models
@@ -283,6 +293,7 @@
             <li class="mb-2">
               <a
                 class="dropdown-item text-wrap"
+                style="min-width: 250px"
                 href="/tutorials/towards-resilient-and-ultrasafe-energy-systems-for-the-next-gen-smart-grid/"
               >
                 Towards Resilient and Ultrasafe Energy Systems for the Next-Gen
@@ -324,6 +335,7 @@
             <li>
               <a
                 class="dropdown-item text-wrap"
+                style="min-width: 250px"
                 href="/venue/telus-convention-center"
                 >Telus Convention Center</a
               >
