Updated Industry Day schedule

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
       ><img src="/assets//images/ieee mb white png.png" height="22px" />
 
       <!-- <p class="m-0 d-sm-block d-none mt-1">Smart World Congress 2025</p> -->
-      <p class="m-0 mt-1">SWC 2025</p>
+      <p class="m-0 mt-1 fw-semibold">SWC 2025</p>
     </a>
     <button
       class="navbar-toggler"
@@ -24,7 +24,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown align-content-center">
           <a
             class="nav-link dropdown-toggle text-white"
             href="#"
@@ -61,7 +61,7 @@
             </li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown align-content-center">
           <a
             class="nav-link dropdown-toggle text-white"
             href="#"
@@ -103,7 +103,7 @@
             </li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown align-content-center">
           <a
             class="nav-link dropdown-toggle text-white"
             href="#"
@@ -139,7 +139,7 @@
             </li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown align-content-center">
           <a
             class="nav-link dropdown-toggle text-white"
             href="#"
@@ -176,7 +176,7 @@
             </li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown align-content-center">
           <a
             class="nav-link dropdown-toggle text-white"
             href="#"
@@ -234,7 +234,7 @@
             </li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown align-content-center">
           <a
             class="nav-link dropdown-toggle text-white text-wrap"
             href="#"
@@ -310,15 +310,15 @@
             </li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown align-content-center">
           <a class="nav-link text-white" href="/program/industry-day/"
             >Industry Day</a
           >
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown align-content-center">
           <a class="nav-link text-white" href="/program">Program</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown align-content-center">
           <a
             class="nav-link dropdown-toggle text-white"
             href="#"
@@ -370,11 +370,11 @@
             </li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown align-content-center">
           <a class="nav-link text-white" href="/contact"> Contact </a>
         </li>
         <li
-          class="nav-item dropdown ms-xl-2 d-flex flex-column justify-content-center align-items-start"
+          class="nav-item dropdown ms-xl-2 d-flex flex-column justify-content-center align-items-start align-content-center"
         >
           <a class="btn btn-success" href="/registration/">Register</a>
         </li>
