--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 body {
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 500;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -39,6 +39,7 @@ p,
 body,
 .content-text {
   font-family: "Roboto", sans-serif;
+  font-weight: 400 !important;
 }
 
 .jumbotron {
