--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -159,7 +159,7 @@
                 style="min-width: 250px"
                 href="/forums/women-in-the-smart-world/"
               >
-                Women in the Smart World 2025</a
+                Women in the Smart World</a
               >
             </li>
             <li class="border-top mt-2 pt-2">
