--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,12 @@
 
 /* Custom Styles */
 
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
