Updated industry day schedule

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,11 @@
   >
     <div class="row g-5">
       <div class="col-md-6 col-lg-4 d-flex flex-column gap-3">
-        <div class="navbar-brand d-flex flex-row align-items-center gap-lg-3">
+        <div class="navbar-brand d-flex flex-row align-items-center gap-lg-2">
           <img src="/assets//images/ieee mb white png.png" height="22px" />
 
           <!-- <p class="m-0 d-sm-block d-none mt-1">Smart World Congress 2025</p> -->
-          <p class="m-0 mt-1 fs-4">SWC 2025</p>
+          <p class="m-0 mt-1 fs-4 fw-semibold">SWC 2025</p>
         </div>
         <p class="fs-6">
           The IEEE Smart World Congress 2025 (IEEE SWC 2025) will be held from
