Added Whova links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,6 +67,22 @@
         <div
           class="d-flex flex-column gap-2 justify-content-start align-content-start"
         >
+          <a
+            style="
+              background: #2dacee;
+              color: #ffffff;
+              padding: 10px;
+              border-radius: 5px;
+              font-size: 16px;
+              text-decoration: none;
+            "
+            href="https://whova.com/portal/e2ofmZ1VEhHRCKBJo9GMWT-Bp-S-G35Si0RidTNO20c=/?source=btn_link"
+            target="_blank"
+            rel="noreferrer"
+            data-reactroot=""
+            class="btn"
+            >Get Whova Now</a
+          >
           <a href="/registration" class="btn btn-success text-decoration-none"
             >Register for SWC 2025</a
           >
