Modify Whova links

--- a/_includes/whova-lg-row.html
+++ b/_includes/whova-lg-row.html
@@ -46,11 +46,14 @@
             src="https://whova.com/static/frontend/xems/img/app-screenshots.png"
           />
         </p>
-        <p style="margin-bottom: 10px">
+        <p style="margin-bottom: 20px">
           Get the most out of the app and have a more productive experience!
         </p>
         <div style="text-align: left; font-size: 14px; clear: both">
-          <div style="clear: both; margin-bottom: 10px">
+          <div
+            class="d-flex flex-column flex-sm-row justify-content-center justify-content-sm-start align-items-center align-items-sm-start"
+            style="clear: both; margin-bottom: 10px"
+          >
             <p
               style="
                 margin-right: 8px;
@@ -64,13 +67,19 @@
             >
               1
             </p>
-            <p style="color: #2dacee; float: left; max-width: 450px">
+            <p
+              class="text-center text-sm-start"
+              style="color: #2dacee; float: left; max-width: 450px"
+            >
               <b>NAVIGATE</b> the event agenda and logistics, even without Wi-Fi
               or data. Access useful information like ridesharing and local
               attractions through the Community Board
             </p>
           </div>
-          <div style="clear: both; margin-bottom: 10px">
+          <div
+            class="d-flex flex-column flex-sm-row justify-content-center justify-content-sm-start align-items-center align-items-sm-start"
+            style="clear: both; margin-bottom: 10px"
+          >
             <p
               style="
                 margin-right: 8px;
@@ -84,12 +93,18 @@
             >
               2
             </p>
-            <p style="color: #2dacee; float: left; max-width: 450px">
+            <p
+              class="text-center text-sm-start"
+              style="color: #2dacee; float: left; max-width: 450px"
+            >
               <b>NETWORK</b> effectively. Plan whom to meet by exploring
               attendee profiles and sending out messages
             </p>
           </div>
-          <div style="clear: both; margin-bottom: 10px">
+          <div
+            class="d-flex flex-column flex-sm-row justify-content-center justify-content-sm-start align-items-center align-items-sm-start"
+            style="clear: both; margin-bottom: 10px"
+          >
             <p
               style="
                 margin-right: 8px;
@@ -103,13 +118,19 @@
             >
               3
             </p>
-            <p style="color: #2dacee; float: left; max-width: 450px">
+            <p
+              class="text-center text-sm-start"
+              style="color: #2dacee; float: left; max-width: 450px"
+            >
               <b>PARTICIPATE</b> in event activities through session likes,
               comments, ratings, live polling, tweeting, and more
             </p>
           </div>
         </div>
-        <div style="clear: both; text-align: center; padding: 20px 0 5px 0">
+        <div
+          class="d-flex flex-column flex-sm-row gap-2 w-100 justify-content-center mb-1"
+          style="clear: both; text-align: center; padding: 10px 0 10px 0"
+        >
           <a
             href="https://itunes.apple.com/app/apple-store/id716979741?pt=1944835&amp;ct=download_widget&amp;mt=8"
             target="_blank"
@@ -121,7 +142,6 @@
               min-width: 140px;
               display: inline-block;
               text-decoration: none;
-              margin-right: 5px;
             "
             class="btn"
             >iOS</a
