--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,9 @@
     style="max-width: 1400px"
   >
     <div class="row g-5">
-      <div class="col-md-6 col-lg-4 d-flex flex-column gap-3">
-        <div class="navbar-brand d-flex flex-row align-items-center gap-lg-2">
+      <div class="col-12 col-md-3 col-lg-4 d-flex flex-column gap-3">
+        <div class="navbar-brand d-flex flex-row align-items-center gap-2">
           <img src="/assets//images/ieee mb white png.png" height="22px" />
-
-          <!-- <p class="m-0 d-sm-block d-none mt-1">Smart World Congress 2025</p> -->
           <p class="m-0 mt-1 fs-4 fw-semibold">SWC 2025</p>
         </div>
         <p class="fs-6">
@@ -17,7 +15,9 @@
           smart technologies like IoT, AI, smart cities, and cybersecurity.
         </p>
       </div>
-      <div class="col-md-3 col-lg-2 d-flex flex-column gap-lg-3">
+      <div
+        class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex flex-column gap-lg-3"
+      >
         <h3 class="fs-4 mt-1">Conferences</h3>
         <ul class="list-unstyled">
           <li>
@@ -37,7 +37,9 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-3 col-lg-2 d-flex flex-column gap-lg-3">
+      <div
+        class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex flex-column gap-lg-3"
+      >
         <h3 class="fs-4 mt-1">Links</h3>
         <ul class="list-unstyled">
           <li>
@@ -63,7 +65,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-4 mb-4">
+      <div class="col-md-3 col-lg-4 mb-4">
         <div
           class="d-flex flex-column gap-2 justify-content-start align-content-start"
         >
