Updated industry day page

--- a/_includes/whova-lg-row.html
+++ b/_includes/whova-lg-row.html
@@ -17,15 +17,8 @@
   </div>
   <div class="col-md-6">
     <div
-      style="
-        min-height: 500px;
-        padding: 10px;
-        border: 1px solid #ccc;
-        background-color: var(--bs-light-bg-subtle);
-        width: 520px;
-        font-family: Helvetica;
-      "
-      class="rounded w-100"
+      style="min-height: 500px"
+      class="card bg-light-subtle w-100 p-3"
       data-reactroot=""
     >
       <div style="text-align: center; font-size: 16px">
