Added UIC Panel

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -174,6 +174,15 @@
                 AI's Transformative Influence on Higher Education</a
               >
             </li>
+            <li class="">
+              <a
+                class="dropdown-item text-wrap"
+                style="min-width: 250px"
+                href="/uic/#rethinking-research-in-the-age-of-ai"
+              >
+                Rethinking Research in the Age of AI</a
+              >
+            </li>
           </ul>
         </li>
         <li class="nav-item dropdown align-content-center">
