Hide program download until final version ready

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -88,13 +88,13 @@
           <a href="/registration" class="btn btn-success text-decoration-none"
             >Register for SWC 2025</a
           >
-          <a
-            href="/assets/files/IEEE-SWC-2025-Program-Aug7-v1.pdf"
+          <!-- <a
+            href=""
             class="btn btn-primary"
             download
           >
             <i class="bi bi-download"></i> Download Program Schedule (PDF)
-          </a>
+          </a> -->
           <a href="/cfp" class="btn btn-primary text-decoration-none"
             >Call for Papers and Proposals</a
           >
